// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurvedTileModel can build a tile with the given size 1`] = `
CurvedTileModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "length": 110,
  "padding": 10,
  "ratio": 1,
  "width": 90,
}
`;

exports[`CurvedTileModel can build a tile with the given size and ratio 1`] = `
CurvedTileModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "length": 110,
  "padding": 10,
  "ratio": 3,
  "width": 90,
}
`;

exports[`CurvedTileModel can compute the actual length of the tile with a ratio of 0.5 1`] = `110`;

exports[`CurvedTileModel can compute the actual length of the tile with a ratio of 1 1`] = `110`;

exports[`CurvedTileModel can compute the actual length of the tile with a ratio of 2 1`] = `110`;

exports[`CurvedTileModel can compute the actual length of the tile with a ratio of 3 1`] = `110`;

exports[`CurvedTileModel can compute the actual length of the tile with a ratio of 4 1`] = `110`;

exports[`CurvedTileModel can compute the actual width of the tile with a ratio of 0.5 1`] = `90`;

exports[`CurvedTileModel can compute the actual width of the tile with a ratio of 1 1`] = `90`;

exports[`CurvedTileModel can compute the actual width of the tile with a ratio of 2 1`] = `90`;

exports[`CurvedTileModel can compute the actual width of the tile with a ratio of 3 1`] = `90`;

exports[`CurvedTileModel can compute the actual width of the tile with a ratio of 4 1`] = `90`;

exports[`CurvedTileModel can compute the angle of the curve for a tile with a ratio of 0.5 1`] = `45`;

exports[`CurvedTileModel can compute the angle of the curve for a tile with a ratio of 1 1`] = `90`;

exports[`CurvedTileModel can compute the angle of the curve for a tile with a ratio of 2 1`] = `45`;

exports[`CurvedTileModel can compute the angle of the curve for a tile with a ratio of 3 1`] = `30`;

exports[`CurvedTileModel can compute the angle of the curve for a tile with a ratio of 4 1`] = `22.5`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 0.5 1`] = `-45`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 0.5 2`] = `45`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 0.5 3`] = `-45`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 0.5 4`] = `45`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 1 1`] = `-90`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 1 2`] = `0`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 1 3`] = `-90`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 1 4`] = `0`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 2 1`] = `-45`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 2 2`] = `45`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 2 3`] = `-45`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 2 4`] = `45`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 3 1`] = `-30`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 3 2`] = `60`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 3 3`] = `-30`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 3 4`] = `60`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 4 1`] = `-22.5`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 4 2`] = `67.5`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 4 3`] = `-22.5`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 4 4`] = `67.5`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 0.5 1`] = `45`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 0.5 2`] = `135`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 0.5 3`] = `45`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 0.5 4`] = `135`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 1 1`] = `90`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 1 2`] = `180`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 1 3`] = `90`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 1 4`] = `180`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 2 1`] = `45`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 2 2`] = `135`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 2 3`] = `45`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 2 4`] = `135`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 3 1`] = `30`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 3 2`] = `120`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 3 3`] = `30`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 3 4`] = `120`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 4 1`] = `22.5`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 4 2`] = `112.5`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 4 3`] = `22.5`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 4 4`] = `112.5`;

exports[`CurvedTileModel can compute the center of the curve for a tile with a ratio of 0.5 1`] = `
Vector2D {
  "x": -55,
  "y": 0,
}
`;

exports[`CurvedTileModel can compute the center of the curve for a tile with a ratio of 0.5 2`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the center of the curve for a tile with a ratio of 1 1`] = `
Vector2D {
  "x": -55,
  "y": 0,
}
`;

exports[`CurvedTileModel can compute the center of the curve for a tile with a ratio of 1 2`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the center of the curve for a tile with a ratio of 2 1`] = `
Vector2D {
  "x": -165,
  "y": 0,
}
`;

exports[`CurvedTileModel can compute the center of the curve for a tile with a ratio of 2 2`] = `
Vector2D {
  "x": -65,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the center of the curve for a tile with a ratio of 3 1`] = `
Vector2D {
  "x": -275,
  "y": 0,
}
`;

exports[`CurvedTileModel can compute the center of the curve for a tile with a ratio of 3 2`] = `
Vector2D {
  "x": -175,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the center of the curve for a tile with a ratio of 4 1`] = `
Vector2D {
  "x": -385,
  "y": 0,
}
`;

exports[`CurvedTileModel can compute the center of the curve for a tile with a ratio of 4 2`] = `
Vector2D {
  "x": -285,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the inner radius of the curve for a tile with a ratio of 0.5 1`] = `10`;

exports[`CurvedTileModel can compute the inner radius of the curve for a tile with a ratio of 1 1`] = `10`;

exports[`CurvedTileModel can compute the inner radius of the curve for a tile with a ratio of 2 1`] = `120`;

exports[`CurvedTileModel can compute the inner radius of the curve for a tile with a ratio of 3 1`] = `230`;

exports[`CurvedTileModel can compute the inner radius of the curve for a tile with a ratio of 4 1`] = `340`;

exports[`CurvedTileModel can compute the number of chunks by side for a tile with a ratio of 0.5 1`] = `2`;

exports[`CurvedTileModel can compute the number of chunks by side for a tile with a ratio of 1 1`] = `4`;

exports[`CurvedTileModel can compute the number of chunks by side for a tile with a ratio of 2 1`] = `8`;

exports[`CurvedTileModel can compute the number of chunks by side for a tile with a ratio of 3 1`] = `12`;

exports[`CurvedTileModel can compute the number of chunks by side for a tile with a ratio of 4 1`] = `16`;

exports[`CurvedTileModel can compute the number of chunks for the inner curve for a tile with a ratio of 0.5 1`] = `1`;

exports[`CurvedTileModel can compute the number of chunks for the inner curve for a tile with a ratio of 1 1`] = `2`;

exports[`CurvedTileModel can compute the number of chunks for the inner curve for a tile with a ratio of 2 1`] = `4`;

exports[`CurvedTileModel can compute the number of chunks for the inner curve for a tile with a ratio of 3 1`] = `4`;

exports[`CurvedTileModel can compute the number of chunks for the inner curve for a tile with a ratio of 4 1`] = `4`;

exports[`CurvedTileModel can compute the number of chunks for the outer curve for a tile with a ratio of 0.5 1`] = `2`;

exports[`CurvedTileModel can compute the number of chunks for the outer curve for a tile with a ratio of 1 1`] = `4`;

exports[`CurvedTileModel can compute the number of chunks for the outer curve for a tile with a ratio of 2 1`] = `4`;

exports[`CurvedTileModel can compute the number of chunks for the outer curve for a tile with a ratio of 3 1`] = `4`;

exports[`CurvedTileModel can compute the number of chunks for the outer curve for a tile with a ratio of 4 1`] = `4`;

exports[`CurvedTileModel can compute the outer radius of the curve for a tile with a ratio of 0.5 1`] = `100`;

exports[`CurvedTileModel can compute the outer radius of the curve for a tile with a ratio of 1 1`] = `100`;

exports[`CurvedTileModel can compute the outer radius of the curve for a tile with a ratio of 2 1`] = `210`;

exports[`CurvedTileModel can compute the outer radius of the curve for a tile with a ratio of 3 1`] = `320`;

exports[`CurvedTileModel can compute the outer radius of the curve for a tile with a ratio of 4 1`] = `430`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 0.5 1`] = `
Vector2D {
  "x": 0,
  "y": 22.781745930520216,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 0.5 2`] = `
Vector2D {
  "x": 100,
  "y": 122.78174593052023,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 0.5 3`] = `
Vector2D {
  "x": 77.21825406947977,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 1 1`] = `
Vector2D {
  "x": 0,
  "y": 55,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 1 2`] = `
Vector2D {
  "x": 100,
  "y": 155,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 1 3`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 2 1`] = `
Vector2D {
  "x": 0,
  "y": 68.34523779156069,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 2 2`] = `
Vector2D {
  "x": 100,
  "y": 168.34523779156066,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 2 3`] = `
Vector2D {
  "x": 31.654762208439337,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 3 1`] = `
Vector2D {
  "x": 0,
  "y": 73.6860279185587,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 3 2`] = `
Vector2D {
  "x": 100,
  "y": 173.68602791855866,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 3 3`] = `
Vector2D {
  "x": 26.313972081441335,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 4 1`] = `
Vector2D {
  "x": 0,
  "y": 76.58126144116827,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 4 2`] = `
Vector2D {
  "x": 100,
  "y": 176.58126144116827,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 4 3`] = `
Vector2D {
  "x": 23.418738558831734,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the position of the input point for a tile with a ratio of 0.5 1`] = `
Vector2D {
  "x": 100,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the position of the input point for a tile with a ratio of 0.5 2`] = `
Vector2D {
  "x": 0,
  "y": 0,
}
`;

exports[`CurvedTileModel can compute the position of the input point for a tile with a ratio of 1 1`] = `
Vector2D {
  "x": 100,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the position of the input point for a tile with a ratio of 1 2`] = `
Vector2D {
  "x": 0,
  "y": 0,
}
`;

exports[`CurvedTileModel can compute the position of the input point for a tile with a ratio of 2 1`] = `
Vector2D {
  "x": 100,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the position of the input point for a tile with a ratio of 2 2`] = `
Vector2D {
  "x": 0,
  "y": 0,
}
`;

exports[`CurvedTileModel can compute the position of the input point for a tile with a ratio of 3 1`] = `
Vector2D {
  "x": 100,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the position of the input point for a tile with a ratio of 3 2`] = `
Vector2D {
  "x": 0,
  "y": 0,
}
`;

exports[`CurvedTileModel can compute the position of the input point for a tile with a ratio of 4 1`] = `
Vector2D {
  "x": 100,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the position of the input point for a tile with a ratio of 4 2`] = `
Vector2D {
  "x": 0,
  "y": 0,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 1`] = `
Vector2D {
  "x": 16.109127034739892,
  "y": 38.890872965260115,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 2`] = `
Vector2D {
  "x": 116.10912703473988,
  "y": 138.89087296526012,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 3`] = `
Vector2D {
  "x": 61.109127034739885,
  "y": 116.10912703473988,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 4`] = `
Vector2D {
  "x": 16.109127034739892,
  "y": 38.890872965260115,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 5`] = `
Vector2D {
  "x": 116.10912703473988,
  "y": 138.89087296526012,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 6`] = `
Vector2D {
  "x": 61.109127034739885,
  "y": 116.10912703473988,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 1`] = `
Vector2D {
  "x": 55,
  "y": 55,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 2`] = `
Vector2D {
  "x": 155,
  "y": 155,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 3`] = `
Vector2D {
  "x": 45,
  "y": 155,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 4`] = `
Vector2D {
  "x": 55,
  "y": 55,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 5`] = `
Vector2D {
  "x": 155,
  "y": 155,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 6`] = `
Vector2D {
  "x": 45,
  "y": 155,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 1`] = `
Vector2D {
  "x": 48.32738110421967,
  "y": 116.67261889578035,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 2`] = `
Vector2D {
  "x": 148.32738110421968,
  "y": 216.67261889578035,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 3`] = `
Vector2D {
  "x": -16.672618895780346,
  "y": 148.32738110421968,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 4`] = `
Vector2D {
  "x": 48.32738110421967,
  "y": 116.67261889578035,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 5`] = `
Vector2D {
  "x": 148.32738110421968,
  "y": 216.67261889578035,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 6`] = `
Vector2D {
  "x": -16.672618895780346,
  "y": 148.32738110421968,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 1`] = `
Vector2D {
  "x": 36.84301395927935,
  "y": 137.49999999999997,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 2`] = `
Vector2D {
  "x": 136.84301395927935,
  "y": 237.49999999999997,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 3`] = `
Vector2D {
  "x": -37.49999999999997,
  "y": 136.84301395927935,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 4`] = `
Vector2D {
  "x": 36.84301395927935,
  "y": 137.49999999999997,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 5`] = `
Vector2D {
  "x": 136.84301395927935,
  "y": 237.49999999999997,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 6`] = `
Vector2D {
  "x": -37.49999999999997,
  "y": 136.84301395927935,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 1`] = `
Vector2D {
  "x": 29.306379983154613,
  "y": 147.3331214605596,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 2`] = `
Vector2D {
  "x": 129.3063799831546,
  "y": 247.3331214605596,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 3`] = `
Vector2D {
  "x": -47.333121460559596,
  "y": 129.3063799831546,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 4`] = `
Vector2D {
  "x": 29.306379983154613,
  "y": 147.3331214605596,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 5`] = `
Vector2D {
  "x": 129.3063799831546,
  "y": 247.3331214605596,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 6`] = `
Vector2D {
  "x": -47.333121460559596,
  "y": 129.3063799831546,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 1`] = `
Vector2D {
  "x": -16.109127034739885,
  "y": 38.89087296526011,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 2`] = `
Vector2D {
  "x": 83.89087296526012,
  "y": 138.89087296526012,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 3`] = `
Vector2D {
  "x": 61.109127034739885,
  "y": 83.89087296526012,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 4`] = `
Vector2D {
  "x": -16.109127034739885,
  "y": 38.89087296526011,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 5`] = `
Vector2D {
  "x": 83.89087296526012,
  "y": 138.89087296526012,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 6`] = `
Vector2D {
  "x": 61.109127034739885,
  "y": 83.89087296526012,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 1`] = `
Vector2D {
  "x": -55,
  "y": 55,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 2`] = `
Vector2D {
  "x": 45,
  "y": 155,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 3`] = `
Vector2D {
  "x": 45,
  "y": 45,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 4`] = `
Vector2D {
  "x": -55,
  "y": 55,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 5`] = `
Vector2D {
  "x": 45,
  "y": 155,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 6`] = `
Vector2D {
  "x": 45,
  "y": 45,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 1`] = `
Vector2D {
  "x": -48.327381104219654,
  "y": 116.67261889578033,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 2`] = `
Vector2D {
  "x": 51.672618895780346,
  "y": 216.67261889578032,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 3`] = `
Vector2D {
  "x": -16.672618895780317,
  "y": 51.67261889578035,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 4`] = `
Vector2D {
  "x": -48.327381104219654,
  "y": 116.67261889578033,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 5`] = `
Vector2D {
  "x": 51.672618895780346,
  "y": 216.67261889578032,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 6`] = `
Vector2D {
  "x": -16.672618895780317,
  "y": 51.67261889578035,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 1`] = `
Vector2D {
  "x": -36.84301395927935,
  "y": 137.49999999999997,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 2`] = `
Vector2D {
  "x": 63.15698604072065,
  "y": 237.49999999999997,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 3`] = `
Vector2D {
  "x": -37.49999999999997,
  "y": 63.15698604072066,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 4`] = `
Vector2D {
  "x": -36.84301395927935,
  "y": 137.49999999999997,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 5`] = `
Vector2D {
  "x": 63.15698604072065,
  "y": 237.49999999999997,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 6`] = `
Vector2D {
  "x": -37.49999999999997,
  "y": 63.15698604072066,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 1`] = `
Vector2D {
  "x": -29.306379983154613,
  "y": 147.33312146055957,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 2`] = `
Vector2D {
  "x": 70.69362001684539,
  "y": 247.33312146055957,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 3`] = `
Vector2D {
  "x": -47.33312146055957,
  "y": 70.6936200168454,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 4`] = `
Vector2D {
  "x": -29.306379983154613,
  "y": 147.33312146055957,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 5`] = `
Vector2D {
  "x": 70.69362001684539,
  "y": 247.33312146055957,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 6`] = `
Vector2D {
  "x": -47.33312146055957,
  "y": 70.6936200168454,
}
`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 0.5 1`] = `90`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 0.5 2`] = `90`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 1 1`] = `90`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 1 2`] = `90`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 2 1`] = `135`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 2 2`] = `135`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 3 1`] = `150`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 3 2`] = `150`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 4 1`] = `157.5`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 4 2`] = `157.5`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 0.5 1`] = `0`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 0.5 2`] = `0`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 1 1`] = `0`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 1 2`] = `0`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 2 1`] = `0`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 2 2`] = `0`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 3 1`] = `0`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 3 2`] = `0`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 4 1`] = `0`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 4 2`] = `0`;

exports[`CurvedTileModel can compute the side of the curve for a tile with a ratio of 0.5 1`] = `0`;

exports[`CurvedTileModel can compute the side of the curve for a tile with a ratio of 1 1`] = `0`;

exports[`CurvedTileModel can compute the side of the curve for a tile with a ratio of 2 1`] = `0`;

exports[`CurvedTileModel can compute the side of the curve for a tile with a ratio of 3 1`] = `0`;

exports[`CurvedTileModel can compute the side of the curve for a tile with a ratio of 4 1`] = `0`;
